--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,12 @@ install:
   - pip install -r requirements.txt
   - pip install codacy-coverage
   - pip install flake8
+  
+before_script:
+ - cd decide
+ - cp local_settings.travis.py local_settings.py
+ - cd ..
+ 
 script:
   - cd decide
   - coverage run --branch --source=. ./manage.py test --keepdb --with-xunit
