--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,6 @@ before_script:
   - psql -U postgres -c "create user decide password 'decide'"
   - psql -U postgres -c "create database test_decide owner decide"
   - psql -U postgres -c "ALTER USER decide CREATEDB"
- 
-  
 language: python
 python:
   - "3.6"
@@ -24,3 +22,4 @@ script:
   - coverage run --branch --source=. ./manage.py test --keepdb --with-xunit
   - coverage xml
   - python-codacy-coverage -r coverage.xml
+  - flake8 .
